Fix: add images

--- a/index.html
+++ b/index.html
@@ -8,52 +8,52 @@
 </head>
 <body>
     <main class="memory-game">
-        <div class="card" data-card="bowser">
-            <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
+        <div class="card" data-card="dog">
+            <img class="card-front" src="./img/dog.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="luigi">
-            <img class="card-front" src="./img/luigi.png" alt="Face da carta">
+        <div class="card" data-card="morty">
+            <img class="card-front" src="./img/morty.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="mario">
-            <img class="card-front" src="./img/mario.png" alt="Face da carta">
+        <div class="card" data-card="summer">
+            <img class="card-front" src="./img/summer.png" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="peach">
-            <img class="card-front" src="./img/peach.png" alt="Face da carta">
+        <div class="card" data-card="maemorty">
+            <img class="card-front" src="./img/maemorty.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="toad">
-            <img class="card-front" src="./img/toad.png" alt="Face da carta">
+        <div class="card" data-card="paidomorty">
+            <img class="card-front" src="./img/paidomorty.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="yoshi">
-            <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
+        <div class="card" data-card="rick">
+            <img class="card-front" src="./img/rick.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="bowser">
-            <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
+        <div class="card" data-card="dog">
+            <img class="card-front" src="./img/dog.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="luigi">
-            <img class="card-front" src="./img/luigi.png" alt="Face da carta">
+        <div class="card" data-card="morty">
+            <img class="card-front" src="./img/morty.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="mario">
-            <img class="card-front" src="./img/mario.png" alt="Face da carta">
+        <div class="card" data-card="summer">
+            <img class="card-front" src="./img/summer.png" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="peach">
-            <img class="card-front" src="./img/peach.png" alt="Face da carta">
+        <div class="card" data-card="maemorty">
+            <img class="card-front" src="./img/maemorty.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="toad">
-            <img class="card-front" src="./img/toad.png" alt="Face da carta">
+        <div class="card" data-card="paidomorty">
+            <img class="card-front" src="./img/paidomorty.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
-        <div class="card" data-card="yoshi">
-            <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
+        <div class="card" data-card="rick">
+            <img class="card-front" src="./img/rick.jpeg" alt="Face da carta">
             <img class="card-back" src="./img/rickemorty.jpeg" alt="Verso da carta">
         </div>
     </main>
