--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Jogo da memória</title>
 </head>
 <body>
+    <p id="contagem1">Acertos: </p>
+    <p id="contagem"> 0 </p>
+    <button id="button">Clique aqui para reiniciar</button>
     <main class="memory-game">
         <div class="card" data-card="dog">
             <img class="card-front" src="./img/dog.jpeg" alt="Face da carta">
